# ozes

./: Cargo.toml  Dockerfile  IDEA.md  README.md
examples/: consumer.rs  publisher.rs
examples/ozes-consumer/: Cargo.toml
examples/ozes-consumer/src/: main.rs
examples/ozes-publisher/: Cargo.toml
examples/ozes-publisher/src/: main.rs
flowcharts/: README.md
protocol/: README.md
src/: lib.rs  main.rs
src/connection/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/server/: error.rs  group.rs  message_queue.rs  mod.rs
